# dad-cam

./: .gitignore  LICENSE  README.md  about.md  changelog.md  claude.md  contracts.md  package-lock.json  package.json  techguide.md
docs/client/: onesheet.html  packages.html
docs/planning/: dashboard-redesign.md  development-plan.md  importplan.md  libraryfix.md  metadata-plan.json  (+17 more)
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  constants.rs  error.rs  lib.rs  main.rs  tools.rs
src-tauri/src/camera/: bundled.rs  devices.rs  matcher.rs  mod.rs  registration.rs
src-tauri/src/commands/: cameras.rs  clips.rs  devmenu.rs  diagnostics.rs  events.rs  export.rs  library.rs  licensing.rs  mod.rs  scoring.rs  settings.rs  stills.rs  tags.rs
src-tauri/src/db/: app_db.rs  app_schema.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/export/: ffmpeg_builder.rs  mod.rs  timeline.rs  watermark.rs
src-tauri/src/hash/: mod.rs
src-tauri/src/ingest/: audit.rs  copy.rs  discover.rs  file_processor.rs  job_setup.rs  matching.rs  mod.rs  pipeline.rs  sidecar.rs  sidecar_processor.rs  tests.rs  verification.rs
src-tauri/src/jobs/: mod.rs  profile_update.rs  progress.rs  reextract.rs  rematch.rs  runner.rs  worker.rs
src-tauri/src/licensing/: mod.rs
src-tauri/src/metadata/: exiftool.rs  ffprobe.rs  mod.rs
src-tauri/src/preview/: mod.rs  proxy.rs  sprite.rs  thumb.rs
src-tauri/src/scoring/: analyzer.rs  audio.rs  mod.rs  motion.rs  scene.rs  sharpness.rs  tests.rs
(+63 files in other folders)
