[package]
name = "dad-cam"
version = "0.1.154"
description = "A cross-platform video library for dad cam footage"
authors = ["Dad Cam Team"]
edition = "2021"
default-run = "dad-cam"

[lib]
name = "dad_cam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dad-cam"
path = "src/main.rs"

[[bin]]
name = "dadcam"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"

# Structured logging
log = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
blake3 = "1.5"

# FFmpeg wrapper
ffmpeg-sidecar = "2.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File walking
walkdir = "2.5"

# Path utilities
directories = "5.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Regex for parsing
regex = "1.10"

# Hostname for worker ID
hostname = "0.3"

# File time preservation
filetime = "0.2"

# OS keychain for license key storage
keyring = "2"

# Random for shuffle ordering
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"

